--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
     <div class="container" style="margin-top: 20px">
       <div class="row">
         <div class="col-12">
-          <button type="button" onclick="hillClimbing()" class="btn btn-primary">Hill Climbing</button>
+          <button type="button" onclick="hillClimbingEstocastico()" class="btn btn-primary">Hill Climbing Estocastico</button>
+          <button type="button" onclick="hillClimbingFirstChoice()" class="btn btn-primary">Hill Climbing First Choice</button>
         </div>
         <br>
         <br>
@@ -163,7 +164,7 @@
 
   </body>
   <script type="text/javascript" src="js/ia.js"></script>
-  <script type="text/javascript" src="js/genetico.js"></script>
-  <script type="text/javascript" src="js/geneticoTests.js"></script>
   <script type="text/javascript" src="js/live.js"></script>
+  <script type="text/javascript" src="js/genetico.js"></script>
+
 </html>
